--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       <h2>PDF files:</h2>
       <a href="pdfs/2022-emerson-investor-conference-presentation-en-us-8669674.pdf">2022-emerson-investor-conference-presentation-en-us-8669674.pdf</a><br>
       <a href="pdfs/2310.07554.pdf">2310.07554.pdf</a><br>
+      <a href="pdfs/A320 - MPD Tally Rules.pdf">A320 - MPD Tally Rules.pdf</a><br>
+      <a href="pdfs/A320 - EO Task Cards.pdf">A320 - EO Task Cards.pdf</a><br>
+      <a href="pdfs/A320 - EO Tally Rules.pdf">A320 - EO Tally Rules.pdf</a><br>
+      <a href="pdfs/20131231103232738561744.pdf">20131231103232738561744.pdf</a><br>
+      <a href="pdfs/a-e-valves-acquisition-en-5282244.pdf">a-e-valves-acquisition-en-5282244.pdf</a><br>
       <h2>Large PDF files:</h2>
       <a href="pdfs/large/2022-emerson-esg-report-en-us-9201398.pdf">2022-emerson-esg-report-en-us-9201398.pdf</a><br>
     </main>
