--- a/index.html
+++ b/index.html
@@ -12,13 +12,26 @@
     <main>
       <h1>PDF-testing</h1>
       <h2>PDF files:</h2>
+      <a href="pdfs/B777 - MPD Task Card.pdf">B777 - MPD Task Card.pdf</a><br>
       <a href="pdfs/2022-emerson-investor-conference-presentation-en-us-8669674.pdf">2022-emerson-investor-conference-presentation-en-us-8669674.pdf</a><br>
+      <a href="pdfs/B767 - MPD Task cards.pdf">B767 - MPD Task cards.pdf</a><br>
       <a href="pdfs/2310.07554.pdf">2310.07554.pdf</a><br>
+      <a href="pdfs/B787- Fault Card.pdf">B787- Fault Card.pdf</a><br>
+      <a href="pdfs/B787 - EO Tally.pdf">B787 - EO Tally.pdf</a><br>
+      <a href="pdfs/B777 - MPD Tally.pdf">B777 - MPD Tally.pdf</a><br>
       <a href="pdfs/A320 - MPD Tally Rules.pdf">A320 - MPD Tally Rules.pdf</a><br>
+      <a href="pdfs/B787 - EO Task Card.pdf">B787 - EO Task Card.pdf</a><br>
       <a href="pdfs/A320 - EO Task Cards.pdf">A320 - EO Task Cards.pdf</a><br>
+      <a href="pdfs/B777 - EO Tally.pdf">B777 - EO Tally.pdf</a><br>
+      <a href="pdfs/B777 - EO Task Card.pdf">B777 - EO Task Card.pdf</a><br>
+      <a href="pdfs/B767 - EO Task Cards.pdf">B767 - EO Task Cards.pdf</a><br>
+      <a href="pdfs/B767 - EO Tally.pdf">B767 - EO Tally.pdf</a><br>
+      <a href="pdfs/B787- MPD Tally.pdf">B787- MPD Tally.pdf</a><br>
       <a href="pdfs/A320 - EO Tally Rules.pdf">A320 - EO Tally Rules.pdf</a><br>
       <a href="pdfs/20131231103232738561744.pdf">20131231103232738561744.pdf</a><br>
       <a href="pdfs/a-e-valves-acquisition-en-5282244.pdf">a-e-valves-acquisition-en-5282244.pdf</a><br>
+      <a href="pdfs/B767 - MPD Tally.pdf">B767 - MPD Tally.pdf</a><br>
+      <a href="pdfs/B787- MPD Task Cards.pdf">B787- MPD Task Cards.pdf</a><br>
       <h2>Large PDF files:</h2>
       <a href="pdfs/large/2022-emerson-esg-report-en-us-9201398.pdf">2022-emerson-esg-report-en-us-9201398.pdf</a><br>
     </main>
