--- a/index.html
+++ b/index.html
@@ -15,24 +15,34 @@
       <a href="pdfs/B777 - MPD Task Card.pdf">B777 - MPD Task Card.pdf</a><br>
       <a href="pdfs/2022-emerson-investor-conference-presentation-en-us-8669674.pdf">2022-emerson-investor-conference-presentation-en-us-8669674.pdf</a><br>
       <a href="pdfs/B767 - MPD Task cards.pdf">B767 - MPD Task cards.pdf</a><br>
+      <a href="pdfs/emerson-epg-may-2017-en-4862588.pdf">emerson-epg-may-2017-en-4862588.pdf</a><br>
       <a href="pdfs/2310.07554.pdf">2310.07554.pdf</a><br>
+      <a href="pdfs/brochure-controlinc-320a-bettis-en-84536.pdf">brochure-controlinc-320a-bettis-en-84536.pdf</a><br>
       <a href="pdfs/B787- Fault Card.pdf">B787- Fault Card.pdf</a><br>
       <a href="pdfs/B787 - EO Tally.pdf">B787 - EO Tally.pdf</a><br>
+      <a href="pdfs/instruction-manual-fisher-et-eat-easy-e-valves-cl125-through-cl600-en-124782__rects.pdf">instruction-manual-fisher-et-eat-easy-e-valves-cl125-through-cl600-en-124782__rects.pdf</a><br>
       <a href="pdfs/B777 - MPD Tally.pdf">B777 - MPD Tally.pdf</a><br>
       <a href="pdfs/A320 - MPD Tally Rules.pdf">A320 - MPD Tally Rules.pdf</a><br>
       <a href="pdfs/B787 - EO Task Card.pdf">B787 - EO Task Card.pdf</a><br>
       <a href="pdfs/A320 - EO Task Cards.pdf">A320 - EO Task Cards.pdf</a><br>
       <a href="pdfs/B777 - EO Tally.pdf">B777 - EO Tally.pdf</a><br>
+      <a href="pdfs/combined.pdf">combined.pdf</a><br>
       <a href="pdfs/B777 - EO Task Card.pdf">B777 - EO Task Card.pdf</a><br>
       <a href="pdfs/B767 - EO Task Cards.pdf">B767 - EO Task Cards.pdf</a><br>
       <a href="pdfs/B767 - EO Tally.pdf">B767 - EO Tally.pdf</a><br>
       <a href="pdfs/B787- MPD Tally.pdf">B787- MPD Tally.pdf</a><br>
+      <a href="pdfs/HM-WP CC-BGW JUN2023 [DES-STORAGE] LINE 001-003.pdf">HM-WP CC-BGW JUN2023 [DES-STORAGE] LINE 001-003.pdf</a><br>
+      <a href="pdfs/emerson-reports-fourth-quarter-full-year-2023-results-provides-initial-2024-outlook-en-us-9882678.pdf">emerson-reports-fourth-quarter-full-year-2023-results-provides-initial-2024-outlook-en-us-9882678.pdf</a><br>
+      <a href="pdfs/instruction-manual-fisher-et-eat-easy-e-valves-cl125-through-cl600-en-124782 (1).pdf">instruction-manual-fisher-et-eat-easy-e-valves-cl125-through-cl600-en-124782 (1).pdf</a><br>
       <a href="pdfs/A320 - EO Tally Rules.pdf">A320 - EO Tally Rules.pdf</a><br>
       <a href="pdfs/20131231103232738561744.pdf">20131231103232738561744.pdf</a><br>
+      <a href="pdfs/emerson-reports-third-quarter-2023-results-updates-2023-outlook-en-us-9281446.pdf">emerson-reports-third-quarter-2023-results-updates-2023-outlook-en-us-9281446.pdf</a><br>
       <a href="pdfs/a-e-valves-acquisition-en-5282244.pdf">a-e-valves-acquisition-en-5282244.pdf</a><br>
+      <a href="pdfs/emerson-reports-fourth-quarter-full-year-2023-results-provides-initial-2024-outlook-en-us-9882696.pdf">emerson-reports-fourth-quarter-full-year-2023-results-provides-initial-2024-outlook-en-us-9882696.pdf</a><br>
       <a href="pdfs/B767 - MPD Tally.pdf">B767 - MPD Tally.pdf</a><br>
       <a href="pdfs/B787- MPD Task Cards.pdf">B787- MPD Task Cards.pdf</a><br>
       <h2>Large PDF files:</h2>
+      <a href="pdfs/large/control-valve-handbook-en-3661206.pdf">control-valve-handbook-en-3661206.pdf</a><br>
       <a href="pdfs/large/2022-emerson-esg-report-en-us-9201398.pdf">2022-emerson-esg-report-en-us-9201398.pdf</a><br>
     </main>
     <script src="index.js"></script>
